--- a/Css/Style.css
+++ b/Css/Style.css
@@ -30,3 +30,8 @@ p, ul{
 body{
     background-color: rgb(120, 120, 120);
 }
+.cabezera{
+    text-align: center;
+    font-size: 50px;
+    color: rgb(191, 191, 191);
+}
